style: fixed product card spacing

--- a/src/css/products.css
+++ b/src/css/products.css
@@ -38,13 +38,14 @@
 
 .price-filter {
   align-self: flex-end;
-  padding-right: 12rem;
+  padding-right: 4rem;
 }
 
 .product-container {
   display: flex;
   flex-wrap: wrap;
-  padding: 2rem;
+  padding-top: 2rem;
+  justify-content: space-evenly;
 }
 
 .product-filter {
@@ -53,8 +54,7 @@
 /* product cards */
 
 .card {
-  margin-right: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .wishlist-button {
